[project]
name = "ragpdf"
version = "0.1.0"
description = "RAG PDF Question Answering with LangChain and Ollama"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-huggingface>=0.1.0",
    "langchain-ollama>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-classic>=0.3.0",
    "langgraph>=0.2.0",
    "pypdf>=5.0.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "huggingface-hub>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
]
